@@ -1,6 +1,8 @@
 package com.vizuo.backend.controller;
 
 import com.vizuo.backend.dto.ImageResponse;
+import com.vizuo.backend.entity.User;
+import com.vizuo.backend.service.UserService;
 import com.vizuo.backend.service.ImageService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -19,37 +21,37 @@ public class ImageController {
     @Autowired
     private ImageService imageService;
 
+    @Autowired
+    private UserService userService;
+
     @PostMapping("/upload")
-    public ResponseEntity<?> uploadImage(
+    public ResponseEntity<?> uploadImage(Authentication authentication,
             @RequestParam(value = "fileName", required = false) String fileName,
             @RequestParam(value = "description", required = false) String description,
             @RequestParam(value = "keywords", required = false) String keywords,
             @RequestParam(value = "previewFiles", required = false) MultipartFile[] previewFiles,
-            @RequestParam(value = "attachmentFiles", required = false) MultipartFile[] attachmentFiles,
-            @RequestParam(value = "email", required = false) String email) {
-        
+            @RequestParam(value = "attachmentFiles", required = false) MultipartFile[] attachmentFiles) {
+
         try {
-            // Temporary: use email from request param instead of authentication
-            // TODO: Implement JWT authentication filter
-            if (email == null || email.isEmpty()) {
-                email = "test@example.com"; // Default user for testing
-            }
-            
-            List<String> keywordList = keywords != null && !keywords.isEmpty() 
-                ? Arrays.asList(keywords.split(",")) 
-                : List.of();
+            Long userId = Long.parseLong(authentication.getName());
+            User user = userService.getUserById(userId);
+            String email = user.getEmail();
+
+            List<String> keywordList = keywords != null && !keywords.isEmpty()
+                    ? Arrays.asList(keywords.split(","))
+                    : List.of();
 
             List<MultipartFile> previewFileList = previewFiles != null ? Arrays.asList(previewFiles) : List.of();
-            List<MultipartFile> attachmentFileList = attachmentFiles != null ? Arrays.asList(attachmentFiles) : List.of();
+            List<MultipartFile> attachmentFileList = attachmentFiles != null ? Arrays.asList(attachmentFiles)
+                    : List.of();
 
             ImageResponse response = imageService.uploadImage(
-                email, 
-                fileName, 
-                description, 
-                keywordList, 
-                previewFileList, 
-                attachmentFileList
-            );
+                    email,
+                    fileName,
+                    description,
+                    keywordList,
+                    previewFileList,
+                    attachmentFileList);
 
             return ResponseEntity.ok(response);
         } catch (Exception e) {
@@ -90,12 +92,34 @@ public class ImageController {
     }
 
     @GetMapping("/feed")
-    public ResponseEntity<?> getFeedImages() {
+    public ResponseEntity<?> getFeedImages(Authentication authentication) {
         try {
-            List<ImageResponse> images = imageService.getFeedImages();
+            Long currentUserId = null;
+            if (authentication != null) {
+                currentUserId = Long.parseLong(authentication.getName());
+            }
+
+            List<ImageResponse> images = imageService.getFeedImages(currentUserId);
             return ResponseEntity.ok(images);
         } catch (Exception e) {
             return ResponseEntity.badRequest().body("Failed to get feed images: " + e.getMessage());
         }
     }
+
+    @PostMapping("/{id}/like")
+    public ResponseEntity<?> likeImage(@PathVariable Long id, Authentication authentication) {
+        Long userId = Long.parseLong(authentication.getName());
+        User user = userService.getUserById(userId);
+        String email = user.getEmail();
+        return ResponseEntity.ok(imageService.likeImage(id, email));
+    }
+
+    @DeleteMapping("/{id}/like")
+    public ResponseEntity<?> unlikeImage(@PathVariable Long id, Authentication authentication) {
+        Long userId = Long.parseLong(authentication.getName());
+        User user = userService.getUserById(userId);
+        String email = user.getEmail();
+        return ResponseEntity.ok(imageService.unlikeImage(id, email));
+    }
+
 }
